Table members {
    member_id integer pk
    username varchar
    password varchar
    email varchar
    balance integer

  Note: 'Stores user data'
}

Table riders {
    rider_id integer pk
    name varchar
    active boolean

  Note: 'Stores rider data'
}

Table events {
    event_id integer pk
    name varchar
    date date

  Note: 'Stores event data'
}

Table bids {
    bid_id integer pk
    member_id integer
    rider_id integer
    event_id integer
    amount integer

  Note: 'Stores bid data'
}

Ref: "members"."member_id" < "bids"."member_id"

Ref: "riders"."rider_id" < "bids"."rider_id"

Ref: "events"."event_id" < "bids"."event_id"
